Fix list on mobile

--- a/src/main/resources/static/styles/tournament/view.css
+++ b/src/main/resources/static/styles/tournament/view.css
@@ -75,6 +75,7 @@ li.teamMember{
 
 @media only screen and (max-width: 1000px) {
     .teamCard {
+        margin: 10px 0!important;
         width: -moz-available;          /* WebKit-based browsers will ignore this. */
         width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
         width: fill-available;
